fix chart styles on small device

--- a/src/components/CompanyAndJobTitle/WorkExperiences/Aspects/styles.module.css
+++ b/src/components/CompanyAndJobTitle/WorkExperiences/Aspects/styles.module.css
@@ -36,8 +36,10 @@
 
     .distribution {
       flex: 1;
-      width: 300px;
-      height: 100px;
+      .scoreDistribution {
+        width: 300px;
+        height: 100px;
+      }
     }
   }
 
